# DigiMe

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
benchmarks/: replay_cases.json
config/: profiles.example.yaml
src/digime/: __init__.py  cli.py  config.py
src/digime/agent/: __init__.py  conversation.py  meeting.py  personality.py  proxy_prompt.py  proxy_reply.py  reply_agent.py
src/digime/api/: __init__.py
src/digime/benchmark/: __init__.py  replay.py
src/digime/connectors/: __init__.py  calendar_provider.py  calendar_registry.py  discord.py  discord_watch.py  google_calendar.py  slack.py  whatsapp.py
src/digime/ingest/: __init__.py  models.py  redaction.py
src/digime/llm/: __init__.py  ollama.py  qwen.py
src/digime/memory/: __init__.py  store.py  vector.py
src/digime/style/: __init__.py  profile.py
tests/: test_benchmark.py  test_calendar_registry.py  test_config.py  test_conversation.py  test_discord_store.py  test_meeting.py  test_proxy_reply.py  test_redaction.py  test_replay.py  test_slack_store.py
